# Charlie-API-Management

./: FOR-CONTRIBUTORS.md  PRD.md  README.md
BE-CAM/: README.md  app.py  authentication.py  mailer.py  middlewares.py  pyproject.toml  utils.py
BE-CAM/be_cam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
BE-CAM/database/: database.py  db-migrate.sh  enums.py  models.py
BE-CAM/services/: api.py  service.py  user.py  utils.py
BE-CAM/subRouters/v1/: api.py  service.py  user.py
FE-CAM/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
FE-CAM/src/: App.less  App.tsx  main.tsx  router.tsx  utils.ts  utils.tsx
FE-CAM/src/api/: index.ts
FE-CAM/src/components/: BlankPage.tsx  index.module.less
FE-CAM/src/hooks/: README.md  useApi.ts  useApi.tsx  useService.ts  useService.tsx  useUser.ts  useUser.tsx
FE-CAM/src/i18n/: index.ts
FE-CAM/src/request/: index.ts
FE-CAM/src/router/: index.tsx
cam-fe-code-generator/: README.md  package-lock.json  package.json  tsconfig.json
cam-fe-code-generator/src/cli/: index.ts  init.ts  update.ts  user.ts
cam-fe-code-generator/src/request/: index.ts
cam-fe-code-generator/src/templates/: init.ts  request-demo.ts  service-class.ts
codegen-CAM/: package-lock.json  package.json  tsconfig.json
codegen-CAM/src/: cli.ts
fe-code-generator-CAM/: README.md  package-lock.json  package.json  tsconfig.json
fe-code-generator-CAM/scripts/: inject-version.js
fe-code-generator-CAM/src/: cli.ts  index.ts
fe-code-generator-CAM/src/cli/: add-service.ts  index.ts  init.ts  service.ts  update.ts  user.ts
(+89 files in other folders)
