[project]
name = "be-cam"
version = "0.1.0"
description = "Backend of CAM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.0.0",
    "alembic>=1.17.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "robyn>=0.72.2",
    "sqlalchemy>=2.0.44",
]

[tool.setuptools]
packages = ["database", "services", "subRouters"]

[tool.setuptools.package-dir]
"" = "."
